inserimento tag semantici nav e main

--- a/todoolist.html
+++ b/todoolist.html
@@ -12,75 +12,72 @@
           Todoolist
         </span>
     </header>
+    <!-- bottoni principali -->
+    <nav>
+      <span class="first-button blue" >
+        Add task
+      </span>
+      <span class="first-button grey">
+        Add section
+      </span>
+    </nav>
+    <!--corpo della pagina  -->
     <main>
-      <!-- bottoni principali -->
-      <div class="layout-1">
-        <span class="first-button blue" >
-          Add task
-        </span>
-        <span class="first-button grey">
-          Add section
-        </span>
-      </div>
-      <!--corpo della pagina  -->
-      <div class="layout-2">
-
-        <section>
-          <h2>&darr; New task</h2>
-          <div class="riga">
-            <span class="checkmark">&nbsp;&check;&nbsp;</span>
-              Quarterly Newletter
-            <span class="second-button blue">Editorial</span>
-          </div>
-        </section>
-        <!-- sezione today -->
-        <section>
-          <h2>&darr; Today</h2>
-          <div class="riga">
-            <span class="checkmark">&nbsp;&check;&nbsp;</span>
-              Recruiting blog post
-            <span class="second-button blue">Editorial</span>
-          </div>
-          <div class="riga">
-            <span class="checkmark">&nbsp;&check;&nbsp;</span>
-              Mobile app launch
-            <span class="second-button purple">Q1 Goals</span>
-          </div>
-          <div class="riga">
-            <span class="cross">&nbsp;&cross;&nbsp;</span>
-              Interview app launch
-            <span class="second-button green">Recruiting</span>
-          </div>
-          <div class="riga">
-            <span class="checkmark">&nbsp;&check;&nbsp;</span>
-              Summit update to mobile storefronts
-            <span class="second-button orange">Mobile</span>
-          </div>
-        </section>
-        <!-- sezione upcoming -->
-        <section>
-          <h2>&darr; Upcoming</h2>
-          <div class="riga">
-            <span class="cross">&nbsp;&cross;&nbsp;</span>
-              Schedule meeting with Alex
-          </div>
-          <div class="riga">
-            <span class="checkmark">&nbsp;&check;&nbsp;</span>
-              Homepage refresh
-            <span class="second-button fucsia">Website</span>
-          </div>
-          <div class="riga">
-            <span class="checkmark">&nbsp;&check;&nbsp;</span>
-              Interview app launch
-            <span class="second-button green">Sales</span>
-          </div>
-          <div class="riga">
-            <span class="checkmark">&nbsp;&check;&nbsp;</span>
-              Summit update to mobile storefronts
-            <span class="second-button blue">Editorial</span>
-          </div>
-        </section>
-      </div>
+      <section>
+        <h2>&darr; New task</h2>
+        <div class="riga">
+          <span class="checkmark">&nbsp;&check;&nbsp;</span>
+            Quarterly Newletter
+          <span class="second-button blue">Editorial</span>
+        </div>
+      </section>
+      <!-- sezione today -->
+      <section>
+        <h2>&darr; Today</h2>
+        <div class="riga">
+          <span class="checkmark">&nbsp;&check;&nbsp;</span>
+            Recruiting blog post
+          <span class="second-button blue">Editorial</span>
+        </div>
+        <div class="riga">
+          <span class="checkmark">&nbsp;&check;&nbsp;</span>
+            Mobile app launch
+          <span class="second-button purple">Q1 Goals</span>
+        </div>
+        <div class="riga">
+          <span class="cross">&nbsp;&cross;&nbsp;</span>
+            Interview app launch
+          <span class="second-button green">Recruiting</span>
+        </div>
+        <div class="riga">
+          <span class="checkmark">&nbsp;&check;&nbsp;</span>
+            Summit update to mobile storefronts
+          <span class="second-button orange">Mobile</span>
+        </div>
+      </section>
+      <!-- sezione upcoming -->
+      <section>
+        <h2>&darr; Upcoming</h2>
+        <div class="riga">
+          <span class="cross">&nbsp;&cross;&nbsp;</span>
+            Schedule meeting with Alex
+        </div>
+        <div class="riga">
+          <span class="checkmark">&nbsp;&check;&nbsp;</span>
+            Homepage refresh
+          <span class="second-button fucsia">Website</span>
+        </div>
+        <div class="riga">
+          <span class="checkmark">&nbsp;&check;&nbsp;</span>
+            Interview app launch
+          <span class="second-button green">Sales</span>
+        </div>
+        <div class="riga">
+          <span class="checkmark">&nbsp;&check;&nbsp;</span>
+            Summit update to mobile storefronts
+          <span class="second-button blue">Editorial</span>
+        </div>
+      </section>
     </main>
   </body>
 </html>
