--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <img  class="logo" src="img/logo.png" alt="">
+      <img class="logo" src="img/logo.png" alt="">
         <span class="titolo">
           Todoolist
         </span>
@@ -24,61 +24,62 @@
     <!--corpo della pagina  -->
     <main>
       <ul>
+        <!-- sezione New task -->
         <li>
-          <h2>&darr; New task</h2>
+          <h2> New task</h2>
+            <div class="riga">
+              <span class="checkmark">&nbsp;&check;&nbsp;</span>
+                Quarterly Newletter
+              <span class="second-button blue">Editorial</span>
+            </div>
+        </li>
+        <!-- sezione today -->
+        <li>
+          <h2> Today</h2>
+            <div class="riga">
+              <span class="checkmark">&nbsp;&check;&nbsp;</span>
+                Recruiting blog post
+              <span class="second-button blue">Editorial</span>
+            </div>
           <div class="riga">
             <span class="checkmark">&nbsp;&check;&nbsp;</span>
-            Quarterly Newletter
+              Mobile app launch
+            <span class="second-button purple">Q1 Goals</span>
+          </div>
+          <div class="riga">
+            <span class="cross">&nbsp;&cross;&nbsp;</span>
+              Interview app launch
+            <span class="second-button green">Recruiting</span>
+          </div>
+          <div class="riga">
+            <span class="checkmark">&nbsp;&check;&nbsp;</span>
+              Summit update to mobile storefronts
+            <span class="second-button orange">Mobile</span>
+          </div>
+        </li>
+        <!-- sezione Upcoming -->
+        <li>
+          <h2> Upcoming</h2>
+            <div class="riga">
+              <span class="cross">&nbsp;&cross;&nbsp;</span>
+                Schedule meeting with Alex
+            </div>
+          <div class="riga">
+            <span class="checkmark">&nbsp;&check;&nbsp;</span>
+              Homepage refresh
+            <span class="second-button fucsia">Website</span>
+          </div>
+          <div class="riga">
+            <span class="checkmark">&nbsp;&check;&nbsp;</span>
+              Interview app launch
+            <span class="second-button green">Sales</span>
+          </div>
+          <div class="riga">
+            <span class="checkmark">&nbsp;&check;&nbsp;</span>
+              Summit update to mobile storefronts
             <span class="second-button blue">Editorial</span>
           </div>
         </li>
-      <!-- sezione today -->
-      <li>
-        <h2>&darr; Today</h2>
-          <div class="riga">
-            <span class="checkmark">&nbsp;&check;&nbsp;</span>
-            Recruiting blog post
-            <span class="second-button blue">Editorial</span>
-          </div>
-        <div class="riga">
-          <span class="checkmark">&nbsp;&check;&nbsp;</span>
-          Mobile app launch
-          <span class="second-button purple">Q1 Goals</span>
-        </div>
-        <div class="riga">
-          <span class="cross">&nbsp;&cross;&nbsp;</span>
-          Interview app launch
-          <span class="second-button green">Recruiting</span>
-        </div>
-        <div class="riga">
-          <span class="checkmark">&nbsp;&check;&nbsp;</span>
-          Summit update to mobile storefronts
-          <span class="second-button orange">Mobile</span>
-        </div>
-      </li>
-      <!-- sezione upcoming -->
-      <li>
-        <h2>&darr; Upcoming</h2>
-        <div class="riga">
-          <span class="cross">&nbsp;&cross;&nbsp;</span>
-          Schedule meeting with Alex
-        </div>
-        <div class="riga">
-          <span class="checkmark">&nbsp;&check;&nbsp;</span>
-          Homepage refresh
-          <span class="second-button fucsia">Website</span>
-        </div>
-        <div class="riga">
-          <span class="checkmark">&nbsp;&check;&nbsp;</span>
-          Interview app launch
-          <span class="second-button green">Sales</span>
-        </div>
-        <div class="riga">
-          <span class="checkmark">&nbsp;&check;&nbsp;</span>
-          Summit update to mobile storefronts
-          <span class="second-button blue">Editorial</span>
-        </div>
-      </li>
       </ul>
       </section>
     </main>
